--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/react": "^11.14.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "next-themes": "^0.4.6",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
