--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "next-themes": "^0.4.6",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
